Insertion des données OK

--- a/web/index.html
+++ b/web/index.html
@@ -62,13 +62,17 @@
                 <tr>
                   <th>Nom</th>
                   <th>Numéro de Téléphone</th>
-                  <th>Nombre de Personnes</th>
+                    <th>Numéro de Table</th>
+                    <th>Date Heure</th>
+                    <th>Type de Cuisine</th>
                   <th>PMR</th>
                   <th>BB</th>
-                  <th>Date Heure</th>
-                  <th>Type de Cuisine</th>
+                    <th>Nombre de Personnes</th>
+                    <th>Numéro de reservation</th>
                 </tr>
               </thead>
+                <tbody>
+                </tbody>
             </table>
           </div>
     </section>
