ajout de suppression

--- a/web/index.html
+++ b/web/index.html
@@ -69,6 +69,7 @@
                   <th>BB</th>
                     <th>Nombre de Personnes</th>
                     <th>Numéro de reservation</th>
+                    <th>Supprimer</th>
                 </tr>
               </thead>
                 <tbody>
