--- a/web/index.html
+++ b/web/index.html
@@ -60,13 +60,13 @@
             <table class="custom-table">
               <thead>
                 <tr>
-                  <th>Nom</th>
-                  <th>Numéro de Téléphone</th>
-                    <th>Numéro de Table</th>
-                    <th>Date Heure</th>
-                    <th>Type de Cuisine</th>
-                  <th>PMR</th>
-                  <th>BB</th>
+                  <th onclick="triSurNom()">Nom</th>
+                  <th onclick="triSurTel()">Numéro de Téléphone</th>
+                    <th onclick="triSurTable()">Numéro de Table</th>
+                    <th onclick="triSurDate()">Date Heure</th>
+                    <th onclick="triSurCuisine()">Type de Cuisine</th>
+                  <th onclick="triSurPMR()">PMR</th>
+                  <th onclick="triSurBb()">Bébé</th>
                     <th>Nombre de Personnes</th>
                     <th>Numéro de reservation</th>
                     <th>Supprimer</th>
