--- a/web/index.html
+++ b/web/index.html
@@ -67,8 +67,8 @@
                     <th onclick="triSurCuisine()">Type de Cuisine</th>
                   <th onclick="triSurPMR()">PMR</th>
                   <th onclick="triSurBb()">Bébé</th>
-                    <th>Nombre de Personnes</th>
-                    <th>Numéro de reservation</th>
+                    <th onclick="triSurClient()">Nombre de Personnes</th>
+                    <th onclick="triSurRes()">Numéro de reservation</th>
                     <th>Supprimer</th>
                 </tr>
               </thead>
