--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,8 @@
 <body onload="init()">
 <div class="bg"></div>
 <div class="bg-text">
-  <h2>Nom Client</h2>
-  <h1 style="font-size:50px">Nom restaurant</h1>
+  <h2>Braine l'Alleud</h2>
+  <h1 style="font-size:50px">Au Bistro MAES Mondial</h1>
   <p>Réservations</p>
 </div>
 <p>
