--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/appMondial.css">
         <script type="text/javascript" src="/eel.js"></script>
         <script src="js/script.js"></script>
-
+        <link rel="shortcut icon" type="image/png" href="img/pistoncup.png"/>
     </head>
 
 
